Prepare for test 1st step

--- a/module-storage/build.gradle
+++ b/module-storage/build.gradle
@@ -5,14 +5,10 @@ plugins {
     id("org.flywaydb.flyway") version("${flywayVersion}")
 }
 
-repositories {
-    mavenCentral()
-}
-
 dependencies {
-    compileOnly("org.featx.spec:spec:${featxSpecVersion}")
-//    implementation("io.projectreactor.kotlin:reactor-kotlin-extensions:1.0.2.RELEASE")
+    implementation("org.featx.spec:spec:${featxSpecVersion}")
     implementation("com.google.guava:guava:${guavaVersion}")
+//    implementation("io.projectreactor.kotlin:reactor-kotlin-extensions:1.0.2.RELEASE")
 //    implementation("org.jetbrains.kotlin:kotlin-reflect")
 //    implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
 //    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-reactor:1.3.5")
@@ -28,6 +24,7 @@ dependencies {
     compileOnly("org.projectlombok:lombok:${lombokVersion}")
     annotationProcessor("org.projectlombok:lombok:${lombokVersion}")
 
+    testImplementation("com.h2database:h2:1.4.200")
     testImplementation("org.springframework.boot:spring-boot-starter-test:${springBootVersion}")
     testImplementation("io.projectreactor:reactor-test:${reactorVersion}")
 }
