data mapper test ok

--- a/gradle.properties
+++ b/gradle.properties
@@ -23,5 +23,5 @@ springRocketMqVersion=2.1.0
 springCloudVersion = Hoxton.SR4
 springCloudAlibabaVersion = 2.2.1.RELEASE
 
-MVN_USERNAME=
-MVN_PASSWORD=
+MVN_USERNAME=qEaLYA
+MVN_PASSWORD=nHmxSO7S4R
