--- a/gradle.properties
+++ b/gradle.properties
@@ -13,15 +13,13 @@ okHttpVersion = 4.7.2
 commonPools2Version = 2.8.0
 
 mysqlVersion = 8.0.20
-hikariCPVersion = 3.4.5
-flywayVersion = 6.3.3
-
-springVersion = 5.2.6.RELEASE
+hikariCPVersion=3.4.5
+flywayVersion=6.3.3
+springVersion=5.2.6.RELEASE
 springBootVersion=2.3.0.RELEASE
 springMybatisVersion=2.1.3
 springRocketMqVersion=2.1.0
-springCloudVersion = Hoxton.SR4
-springCloudAlibabaVersion = 2.2.1.RELEASE
-
-MVN_USERNAME=qEaLYA
-MVN_PASSWORD=nHmxSO7S4R
+springCloudVersion=Hoxton.SR4
+springCloudAlibabaVersion=2.2.1.RELEASE
+MVN_USERNAME=
+MVN_PASSWORD=
