--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-featxSpecVersion = 1.0.0
-servletVersion = 4.0.1
+featxSpecVersion=1.0.1-SNAPSHOT
+servletVersion=4.0.1
 
 groovyVersion = 3.0.4
 kotlinVersion = 1.3.72
