--- a/goals-entr/src/main/resources/application.yaml
+++ b/goals-entr/src/main/resources/application.yaml
@@ -19,7 +19,6 @@ logging:
 
 ---
 spring:
-  profiles: develop
   cloud:
     nacos:
       discovery:
@@ -40,6 +39,9 @@ spring:
     url: jdbc:mysql://127.0.0.1:3306/webbox?useUnicode=true&characterEncoding=utf-8&useSSL=false&autoReconnect=true
     username: root
     password: wgl12wgl
+  config:
+    activate:
+      on-profile: develop
 rocketmq:
   name-server: localhost:9876
   producer:
@@ -52,7 +54,6 @@ rocketmq:
     retry-times-when-send-failed: 2
 ---
 spring:
-  profiles: test
   cloud:
     nacos:
       discovery:
@@ -73,10 +74,12 @@ spring:
     url: jdbc:mysql://127.0.0.1:3306/webbox?useUnicode=true&characterEncoding=utf-8&useSSL=false&autoReconnect=true
     username: root
     password: wgl12wgl
+  config:
+    activate:
+      on-profile: sit
 
 ---
 spring:
-  profiles: uat
   cloud:
     nacos:
       discovery:
@@ -97,10 +100,12 @@ spring:
     url: jdbc:mysql://127.0.0.1:3306/webbox?useUnicode=true&characterEncoding=utf-8&useSSL=false&autoReconnect=true
     username: root
     password: wgl12wgl
+  config:
+    activate:
+      on-profile: uat
 
 ---
 spring:
-  profiles: prod
   cloud:
     nacos:
       discovery:
@@ -121,3 +126,6 @@ spring:
     url: jdbc:mysql://127.0.0.1:3306/webbox?useUnicode=true&characterEncoding=utf-8&useSSL=false&autoReconnect=true
     username: root
     password: wgl12wgl
+  config:
+    activate:
+      on-profile: prod
