--- a/gradle.properties
+++ b/gradle.properties
@@ -1,25 +1,23 @@
 featxSpecVersion=1.0.1-SNAPSHOT
 servletVersion=4.0.1
-
-groovyVersion = 3.0.4
-kotlinVersion = 1.3.72
-
-guavaVersion = 29.0-jre
-lombokVersion = 1.18.12
-slf4jVersion = 1.7.30
-fastJsonVersion = 1.2.68
-reactorVersion = 3.3.6.RELEASE
-okHttpVersion = 4.7.2
-commonPools2Version = 2.8.0
-
-mysqlVersion = 8.0.20
+groovyVersion=3.0.6
+kotlinVersion=1.4.20
+guavaVersion=30.0-jre
+lombokVersion=1.18.16
+slf4jVersion=1.7.30
+fastJsonVersion=1.2.68
+reactorVersion=3.4.0
+okHttpVersion=4.9.0
+commonPools2Version=2.8.0
+mysqlVersion=8.0.20
 hikariCPVersion=3.4.5
 flywayVersion=6.3.3
-springVersion=5.2.6.RELEASE
-springBootVersion=2.3.0.RELEASE
+springVersion=5.3.1
+springBootVersion=2.4.0
 springMybatisVersion=2.1.3
 springRocketMqVersion=2.1.0
-springCloudVersion=Hoxton.SR4
-springCloudAlibabaVersion=2.2.1.RELEASE
+springDepedencyVersion=1.0.10.RELEASE
+springCloudVersion=2020.0.0-M5
+springCloudAlibabaVersion=2.2.3.RELEASE
 MVN_USERNAME=
 MVN_PASSWORD=
